# ttBld

./: .clang-format  .clang-format-ignore  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pugixml_license
.github/: pull_request_template.md
.github/workflows/: codeql-analysis.yml  test_clang_format.yml
MakeSrcFiles/: .srcfiles  addfiles.cpp  convert.cpp  convertdlg.cpp  convertdlg.h  dlgsrcoptions.cpp  dlgsrcoptions.h  funcs.h  main.cpp  makefile  makesrcfiles.rc  pch.cpp  pch.h  precomp.h  res.h  strtable.h  strtable.rc2  ttlibicons.rc2  version.txt
common/: csrcfiles.cpp  csrcfiles.h  dryrun.cpp  dryrun.h  options.cpp  options.h  srcoptions.cpp  srcoptions.h  strtable.h  strtable.rc2  writesrcfiles.cpp  writesrcfiles.h
common/bonepile/: srcoptions.cpp
src/: .srcfiles  .srcfiles.win.yaml  .srcfiles.wx.yaml  .srcfiles.yaml  NinjaStringIds.cpp  NinjaStringIds.h  addfiles.cpp  addfuncname.cpp  addfuncname.h  bldmaster.cpp  bldmaster.h  cmplrClang.cpp  cmplrMsvc.cpp  codelite.cpp  convert.cpp  convertdlg.cpp  convertdlg.h  createmakefile.cpp  csrcfiles.cpp  csrcfiles.h  dlggettext.cpp  dlggettext.h  dlgoptions.cpp  dlgoptions.h  dlgsrcoptions.cpp  dlgsrcoptions.h  dlgvscode.cpp  dlgvscode.h  dryrun.cpp  dryrun.h  file_list.cmake  finder.cpp  funcs.h  gencmdfiles.cpp  gitfuncs.cpp  image_hdr.cpp  init.cpp  launch.cpp  mainapp.cpp  mainapp.h  (+62 more)
src/archive/: addfuncname.cpp  addfuncname.h  convertdlg.cpp  convertdlg.h  dlgoptions.cpp  dlgoptions.h  dlgvscode.cpp  mainapp.cpp  parsehhp.cpp  tabclang.h  tabcompiler.h  tabgeneral.cpp  tabgeneral.h  tablibs.cpp  tablinker.cpp  vscode.cpp
src/bld/: msvcBuild64D.ninja  msvc_dbg.ninja  msvc_rel.ninja
src/convert/: convert.cpp  convert.h  readcodelite.cpp  readdsp.cpp  readvc.cpp  readvcx.cpp  write_cmake.cpp  writevcx.cpp  writevcx.h  wxWidgets_file.cpp  wxWidgets_file.h
src/precompile/: pch.h  pch_wx.h
src/pugixml/: pugiconfig.hpp  pugixml.cpp  pugixml.hpp
src/res/: makefile  makefile.txt  makefile64.txt  makefileAll.txt  makefileSng.txt  makefile_ttbld  makefilettlib.txt  makefilettlib64.txt  pmakefile.txt  vcxproj.filters.xml  vcxproj.xml
src/ttLib/: ttcstr.cpp  ttlibspace.h  ttparser.cpp  ttparser.h  ttregistry.cpp  ttstr.cpp  ttstr.h  ttstrings.h
src/ui/: convertdlg.cpp  convertdlg.h  convertdlgBase.cpp  convertdlgBase.h  convertvs_base.cpp  convertvs_base.h  convertvs_snippet.h  optionsdlg.cpp  optionsdlg.h  optionsdlgBase.cpp  optionsdlgBase.h  ttBld.wxui  vscodedlg.cpp  vscodedlg.h  vscodedlgBase.cpp  vscodedlgBase.h  wxui_code.cmake
src/winres/: cdlprojectpost.txt  makefileAll.txt  makefileSng.txt  vcxproj.xml
src/winsrc/: .srcfiles.yaml  addfiles.cpp  convert.cpp  convertdlg.cpp  convertdlg.h  dlggettext.cpp  dlggettext.h  dlgoptions.cpp  dlgoptions.h  dlgvscode.cpp  dlgvscode.h  finder.cpp  funcs.h  gencmdfiles.cpp  gitfuncs.cpp  launch.cpp  mainapp.cpp  resource.h  strtable.rc  tabclang.cpp  tabcompiler.cpp  tabcompiler.h  tabgeneral.cpp  tabgeneral.h  tablibs.cpp  tablibs.h  tablinker.cpp  tablinker.h  tabrcmidl.cpp  tabrcmidl.h  ttBld.rc  ttlibicons.rc  ttlibicons.rc2  vcxproj.cpp  vcxproj.h  vs.cpp  vscode.cpp  writesrcfiles.cpp  writesrcfiles.h  writevcxproj.cpp  (+2 more)
src/winsrc/archive/: bldmaster.h  strtable.rc2
src/wxsrc/: mainapp.cpp  mainapp.h  pch.h  uifuncs.h
ttBldLib/: .srcfiles.yaml  makefile
ttBldLibS/: .srcfiles.yaml  makefile
ttBldlibwx/: .srcfiles.yaml  makefile
ttNinja/: .srcfiles  makefile
ttNinjaLib/: .srcfiles.yaml  makefile
winsrc/: .srcfiles.yaml  convertdlg.cpp  createmakefile.cpp  dlggettext.cpp  dlgvscode.cpp  finder.cpp  funcs.h  gencmdfiles.cpp  mainapp.cpp  mainapp.h  resource.h  tabcompiler.cpp  tabgeneral.h  tablinker.cpp  tablinker.h  ttBld.rc  ttlibicons.h  vcxproj.cpp  vs.cpp  vscode.cpp  writesrcfiles.h
winsrc/archive/: cmplrClang.cpp
winsrc/precompile/: pch.h
winsrc/res/: cdlprojectpre.txt
